Fix ForeignKeyIndexTest